--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,21 @@ form {
   background: hsl(264 30% 96%);
   border-radius: 8px;
 }
+
+label,
+input,
+textarea,
+select,
+button {
+  display: block;
+}
+
+form {
+  display: grid;
+  gap: 0.5rem;
+}
+
+.form-felt {
+  display: grid;
+  gap: 5px;
+}
